benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_iter9_error.log
=== Verification Error - Iteration 9 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes.rs
Time: 2025-09-15 19:33:40

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:39:24
   |
39 |     let mut res: int = 0;
   |                  ---   ^ expected `int`, found integer
   |                  |
   |                  expected due to this

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:40:24
   |
40 |     let mut pow: int = 1;
   |                  ---   ^ expected `int`, found integer
   |                  |
   |                  expected due to this

error[E0277]: cannot multiply `{integer}` by `vstd::prelude::int`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:55:17
   |
55 |         pow = 2 * pow;
   |                 ^ no implementation for `{integer} * vstd::prelude::int`
   |
   = help: the trait `std::ops::Mul<vstd::prelude::int>` is not implemented for `{integer}`
   = help: the following other types implement trait `std::ops::Mul<Rhs>`:
             `&f128` implements `std::ops::Mul<f128>`
             `&f128` implements `std::ops::Mul`
             `&f16` implements `std::ops::Mul<f16>`
             `&f16` implements `std::ops::Mul`
             `&f32` implements `std::ops::Mul<f32>`
             `&f32` implements `std::ops::Mul`
             `&f64` implements `std::ops::Mul<f64>`
             `&f64` implements `std::ops::Mul`
           and 57 others

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:67:13
   |
67 |     if n == 0 {
   |        -    ^ expected `int`, found integer
   |        |
   |        expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:72:41
   |
72 |         let mut res = nat_to_binary(n / 2);
   |                                     -   ^ expected `int`, found integer
   |                                     |
   |                                     expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:73:16
   |
73 |         if n % 2 == 0 {
   |            -   ^ expected `int`, found integer
   |            |
   |            expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:73:21
   |
73 |         if n % 2 == 0 {
   |            -----    ^ expected `int`, found integer
   |            |
   |            expected because this is `vstd::prelude::int`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:39:24
   |
39 |     let mut res: int = 0;
   |                  ---   ^ expected `int`, found integer
   |                  |
   |                  expected due to this

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:40:24
   |
40 |     let mut pow: int = 1;
   |                  ---   ^ expected `int`, found integer
   |                  |
   |                  expected due to this

error[E0277]: cannot multiply `{integer}` by `vstd::prelude::int`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:55:17
   |
55 |         pow = 2 * pow;
   |                 ^ no implementation for `{integer} * vstd::prelude::int`
   |
   = help: the trait `std::ops::Mul<vstd::prelude::int>` is not implemented for `{integer}`
   = help: the following other types implement trait `std::ops::Mul<Rhs>`:
             `&f128` implements `std::ops::Mul<f128>`
             `&f128` implements `std::ops::Mul`
             `&f16` implements `std::ops::Mul<f16>`
             `&f16` implements `std::ops::Mul`
             `&f32` implements `std::ops::Mul<f32>`
             `&f32` implements `std::ops::Mul`
             `&f64` implements `std::ops::Mul<f64>`
             `&f64` implements `std::ops::Mul`
           and 57 others

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:67:13
   |
67 |     if n == 0 {
   |        -    ^ expected `int`, found integer
   |        |
   |        expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:72:41
   |
72 |         let mut res = nat_to_binary(n / 2);
   |                                     -   ^ expected `int`, found integer
   |                                     |
   |                                     expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:73:16
   |
73 |         if n % 2 == 0 {
   |            -   ^ expected `int`, found integer
   |            |
   |            expected because this is `vstd::prelude::int`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:73:21
   |
73 |         if n % 2 == 0 {
   |            -----    ^ expected `int`, found integer
   |            |
   |            expected because this is `vstd::prelude::int`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
